[package]
name = "newrelic"
version = "0.0.1"
description = "Rust bindings for New Relic."
license = "MIT/Apache-2.0"
authors = ["Herman J. Radtke III <herman@hermanradtke.com>"]

documentation = "https://github.com/hjr3/newrelic"
homepage = "https://github.com/hjr3/newrelic"
repository = "https://github.com/hjr3/newrelic"

build = "build.rs"

[dependencies]
log = "0.3.6"
